--- a/lib/form/form.scss
+++ b/lib/form/form.scss
@@ -10,8 +10,8 @@
         }
     }
     &-td {
-        padding-top: 12px;
-        padding-bottom: 12px;
+        padding-top: 0;
+        padding-bottom: 32px;
     }
     &-td + &-td {
         padding-left: 8px
