--- a/lib/form/form.scss
+++ b/lib/form/form.scss
@@ -1,4 +1,7 @@
 .pzui-form {
+    &-table {
+        border-collapse: collapse;
+    }
     &-tr:first-child {
         .pzui-form-td {
             padding-top: 0;
@@ -9,12 +12,20 @@
             padding-bottom: 0;
         }
     }
+    &-label {
+         line-height: 32px;
+    }
     &-td {
+        vertical-align: top;
         padding-top: 0;
-        padding-bottom: 32px;
+        padding-bottom: 8px;
     }
     &-td + &-td {
         padding-left: 8px
+    }
+    &-error {
+        position: absolute;
+
     }
 
 }
