--- a/lib/layout/layout.scss
+++ b/lib/layout/layout.scss
@@ -2,6 +2,12 @@
     display: flex;
     flex-direction: column;
     border: 1px solid red;
+    &.hasAside {
+        flex-direction: row;
+        .pzui-layout  {
+            flex-direction: column;
+        }
+    }
     &-content {
         flex-grow: 1;
     }
