--- a/lib/button/button.scss
+++ b/lib/button/button.scss
@@ -2,9 +2,9 @@
 
 .pzui-button {
     display: inline-flex;
-    height: 28px;
-    line-height: 28px;
-    padding: 0 10px;
+    height:32px;
+    line-height: 32px;
+    padding: 0 14px;
     align-items: center;
     justify-content: center;
     font-size: 12px;
@@ -16,19 +16,99 @@
     margin: 0;
     border: 1px solid ;
     border-radius: 2px;
-    transition: all 2s ease-in-out;
+    transition: all .2s ease-in-out;
+
+    &:active {
+        transform: translate(1px, 1px);
+    }
 
     &-initial {
-        color: rgb(51, 51,51);
-        background-color: rgb(241,241,241);
+        color: #333333;
+        background-color: #f1f1f1;
         border-color: #ddd;
-        box-shadow: rgba(0,0,0,0) transparent;
+        box-shadow: 0 0 2px 10px transparent;
+        &:active, &:hover {
+            color: #1976d2;
+            background-color: #f1f1f1;
+            border-color: #1976d2;
+        }
+        &.pzui-button-disabled {
+            color: #858585;
+            cursor: not-allowed;
+            background-image: none;
+            background-color: #fbfbfb;
+            border-color: #dddddd;
+            &:active,
+            &:focus,
+            &:hover {
+                color: #858585;
+                background-color: #fbfbfb;
+                border-color: #dddddd;
+            }
+        }
+    }
+
+    &-primary {
+        color: #fff;
+        background-color: #1976d2;
+        border-color: #1976d2;
+        box-shadow: 0 0 2px 10px transparent;
+        &:active, &:hover {
+            color: #fff;
+            background-color:#1976d2;
+            border-color: #1976d2;
+        }
     }
 
     &-success {
-        color: rgb(255,255,255);
-        background-color:  rgb(103,194,58);
-        border-color:   rgb(103,194,58);
-        box-shadow:  rgba(0,0,0,0) transparent;
+        color: #fff;
+        background-color:  #67c23a;
+        border-color:   #67c23a;
+        box-shadow: 0 0 2px 10px transparent;
+        &:active, &:hover {
+            color: #fff;
+            background-color: #67c23a;
+            border-color:  #67c23a;
+        }
     }
+
+    &-warning {
+        color:#fff;
+        background-color: #e6a23c;
+        border-color: #e6a23c;
+        box-shadow: 0 0 2px 10px transparent;
+        &:active, &:hover {
+            color: #fff;
+            background-color: #e6a23c;
+            border-color:  #e6a23c;
+        }
+    }
+
+    &-danger {
+        color:#fff;
+        background-color: #f56c6c;
+        border-color: #f56c6c;
+        box-shadow: 0 0 2px 10px transparent;
+        &:active, &:hover {
+            color: #fff;
+            background-color: #f56c6c;
+            border-color:  #f56c6c;
+        }
+    }
+
+    &-info {
+        color:#fff;
+        background-color:#909399;
+        border-color:#909399;
+        box-shadow: 0 0 2px 10px transparent;
+        &:active, &:hover {
+            color: #fff;
+            background-color: #909399;
+            border-color:  #909399;
+        }
+    }
+}
+
+.pzui-button-disabled {
+    transform: none !important;
 }
